# qt_demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: excel_data.h  line_process.h  logic_except.h  mainwindow.h
resource/: blue.qss
src/: excel_data.cpp  line_process.cpp  mainwindow.cpp  mainwindow.ui
